Refine the build script further